# modely

./: README.md  pyproject.toml
src/modely/: __init__.py
